--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -10,6 +10,25 @@
   publisher={Wiley Online Library}
 }
 
+@article{sweigart2019making,
+  title={Making a Murderer: The Evolutionary Framing of Hybrid Gamete-Killers},
+  author={Sweigart, Andrea L and Brandvain, Yaniv and Fishman, Lila},
+  journal={Trends in Genetics},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{grognet2014genes,
+  title={Genes that bias Mendelian segregation},
+  author={Grognet, Pierre and Lalucque, Herv{\'e} and Malagnac, Fabienne and Silar, Philippe},
+  journal={PLoS genetics},
+  volume={10},
+  number={5},
+  pages={e1004387},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
 @article{haldane1964defense,
   title={A defense of beanbag genetics},
   author={Haldane, John Burdon Sanderson},
