--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -186,7 +186,8 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \include{Chapters/intro}
 \include{Chapters/chapter-01}
 \include{Chapters/genetic_drift}
-%\include{chapter-03}
+\include{Chapters/Molecular_evolution}
+\include{Chapters/genetic_drift_pop_structure}
 \include{Chapters/Pheno_var}
 \include{Chapters/Response_to_sel}
 \include{Chapters/One_locus_selection}
